#68851 - (Patch) A alteração foi feita na versão 5.9.2. Refatoramos os recebimentos de quitação de cheque de terceiros devolvido, liberação de pedidos à vista, acerto, contas a receber avulsa, sinal/pagamento antecipado e gerar crédito cliente/pagamento antecipado de obra, de forma que seja possível validar o recebimento no WebGlass, receber o valor na Cappta e, caso o valor seja recebido, receber o valor no WebGlass. Criamos a situação Processando nos recebimentos de gerar crédito cliente/pagamento antecipado de obra, sinal/pagamento antecipado de pedido, acerto, liberação e acerto de cheque. Caso o recebimento esteja nesta situação, significa que o sistema falhou ao receber o retorno da Cappta e não sabe se o recebimento foi efetuado. Dessa forma, ele poderá consultar o recebimento ou cancelá-lo, clicando no xis vermelho da listagem. OBS.: a alteração afetou todo o código de recebimento, mesmo que a empresa não utilize a Cappta.

--- a/Financeiro/UI/Web/Glass.Financeiro.UI.Web.Process/Glass.Financeiro.UI.Web.Process.csproj
+++ b/Financeiro/UI/Web/Glass.Financeiro.UI.Web.Process/Glass.Financeiro.UI.Web.Process.csproj
@@ -79,6 +79,10 @@
       <HintPath>..\..\..\..\packages\Colosoft.CommonServiceLocator.1.0.0\lib\net40\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\packages\Newtonsoft.Json.10.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PdfSharp, Version=1.32.3057.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\PDFsharp.1.32.3057.0\lib\net20\PdfSharp.dll</HintPath>
       <Private>True</Private>
@@ -129,6 +133,7 @@
     <Compile Include="GeradorBoleto.cs" />
     <Compile Include="Handlers\ArquivoDominio.cs" />
     <Compile Include="Handlers\ArquivoGCon.cs" />
+    <Compile Include="Handlers\RetornoRecebimentoCappta.cs" />
     <Compile Include="Handlers\ArquivoProsoft.cs" />
     <Compile Include="Handlers\Boleto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
