DEV#36 Melhorias nos DTOs para produto cálculo, incluindo um tratamento mais inteligente para recuperação dos itens do cache

--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -708,6 +708,7 @@
     <Compile Include="MDFeUtils\GetWebService.cs" />
     <Compile Include="MDFeUtils\ValidaXML.cs" />
     <Compile Include="Medicao\DAL\FotosMedicaoDAO.cs" />
+    <Compile Include="Model\Calculos\BaseCalculoDTO.cs" />
     <Compile Include="Model\Calculos\ClienteDTO.cs" />
     <Compile Include="Model\Calculos\DadosBaixaEstoqueDTO.cs" />
     <Compile Include="Model\Calculos\DadosChapaVidroDTO.cs" />
