--- a/Glass/AppSettings.config
+++ b/Glass/AppSettings.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <appSettings>
 	<add key="consultaCep" value="1d17d99658a08b01647d890d71c509bb" />
-    <add key="sistema" value="unividros" />
+    <add key="sistema" value="guaporesinop" />
     <add key="ChartImageHandler" value="storage=memory;deleteAfterServicing=true;" />
     <add key="aspnet:MaxHttpCollectionKeys" value="50000" />
     <add key="GravarLogAberturaRelatorio" value="true" />
