#65281 Mudança no controle de matéria prima para permitir adicionar beneficiamentos e imagens no mesmo.

--- a/Comum/Glass.Comum/Glass.Comum.csproj
+++ b/Comum/Glass.Comum/Glass.Comum.csproj
@@ -146,6 +146,7 @@
     </Compile>
     <Compile Include="IndicadorIEDestinatario.cs" />
     <Compile Include="IGeradorBoleto.cs" />
+    <Compile Include="IProdutoBaixaEstoqueRepositorioImagens.cs" />
     <Compile Include="IProvedorFeriados.cs" />
     <Compile Include="IProvedorTraducao.cs" />
     <Compile Include="Log\LogAttribute.cs" />
