--- a/Global/UI/Web/Glass.Global.UI.Web.Process/Glass.Global.UI.Web.Process.csproj
+++ b/Global/UI/Web/Glass.Global.UI.Web.Process/Glass.Global.UI.Web.Process.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Handlers\LoadSvg.cs" />
     <Compile Include="Loja\LojaRepositorioImagens.cs" />
     <Compile Include="Mensagens\LeituraMensagens.cs" />
+    <Compile Include="ProdutoBaixaEstoqueRepositorioImagens.cs" />
     <Compile Include="ProdutoRepositorioImagens.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelatorioDinamico\CadastroRelatorioDinamicoFluxo.cs" />
