--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -1657,6 +1657,7 @@
     <Content Include="Handlers\ValidadorCalcEngine.ashx" />
     <Content Include="Handlers\ExportarFerragem.ashx" />
     <Content Include="Handlers\RetornoRecebimentoCappta.ashx" />
+    <Content Include="Handlers\eCutterService.ashx" />
     <None Include="job_scheduling_data_2_0.xsd">
       <SubType>Designer</SubType>
     </None>
