--- a/UI/Web/Glass.UI.Web.Process/Glass.UI.Web.Process.csproj
+++ b/UI/Web/Glass.UI.Web.Process/Glass.UI.Web.Process.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Behaviors\GridViewBehavior.cs" />
     <Compile Include="Behaviors\GridViewExtensions.cs" />
     <Compile Include="Handlers\CalcEngineReferencesService.cs" />
+    <Compile Include="Handlers\ECutterService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ControlExtensions.cs" />
     <Compile Include="ServiceLocatorAccessor.cs" />
