--- a/Glass.Data/Glass.Data.csproj
+++ b/Glass.Data/Glass.Data.csproj
@@ -1022,6 +1022,7 @@
     <Compile Include="RelDAL\LinhaLacreCteDAO.cs" />
     <Compile Include="RelDAL\PrevisaoProducaoDAO.cs" />
     <Compile Include="RelDAL\ProducaoDiariaRealizadaDAO.cs" />
+    <Compile Include="RelDAL\ProdutosCortadosRptDAO.cs" />
     <Compile Include="RelModel\CapacidadeProducao.cs" />
     <Compile Include="RelModel\ChapasDisponiveis.cs" />
     <Compile Include="RelModel\ControleMvaProdutoPorUf.cs" />
@@ -1477,6 +1478,7 @@
     <Compile Include="RelModel\ProducaoInst.cs" />
     <Compile Include="RelModel\ProdutoEntradaEstoque.cs" />
     <Compile Include="RelModel\ProdutoPedidoProducaoRpt.cs" />
+    <Compile Include="RelModel\ProdutosCortadosRpt.cs" />
     <Compile Include="RelModel\ProdutosLiberarPedidoRpt.cs" />
     <Compile Include="RelModel\ProdutosPedidoEspelhoRpt.cs" />
     <Compile Include="RelModel\ProdutosPedidoRpt.cs" />
