#71986 $40722 #71982 $40719 - Foi implementado o protocolo para enviar os parâmetros para o eCutter fazer a otimização - Foi implementado a importação do retorno do eCutter seguindo o mesmo padrão dos arquivos importados do OptyWay

--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -501,6 +501,12 @@
                 contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.AmbientePedidoEspelho, Glass.Data], Glass.Data" />
       </exports>
     </part>
+
+    <part type="Glass.Otimizacao.Negocios.Componentes.OtimizacaoFluxo, Glass.Negocios.Componentes">
+      <exports>
+        <export contractType="Glass.Otimizacao.Negocios.IOtimizacaoFluxo, Glass.Negocios" />
+      </exports>
+    </part>
     
   </parts>
 </mef.configuration>
