--- a/Negocios/Glass.Negocios/Glass.Negocios.csproj
+++ b/Negocios/Glass.Negocios/Glass.Negocios.csproj
@@ -150,6 +150,9 @@
     <Compile Include="Global\SalvarClienteResultado.cs" />
     <Compile Include="Global\TipoNegociacaoProduto.cs" />
     <Compile Include="Instalacao\IInstalacaoFluxo.cs" />
+    <Compile Include="Otimizacao\ItemOtimizacao.cs" />
+    <Compile Include="Otimizacao\IConteudoArquivoOtimizacao.cs" />
+    <Compile Include="Otimizacao\IOtimizacaoFluxo.cs" />
     <Compile Include="PCP\ICapacidadeProducaoDiariaClassificacaoFluxo.cs" />
     <Compile Include="PCP\ICavaleteFluxo.cs" />
     <Compile Include="PCP\IClassificacaoRoteiroProducaoFluxo.cs" />
@@ -176,6 +179,10 @@
     <ProjectReference Include="..\..\Glass.Data\Glass.Data.csproj">
       <Project>{4f2eaa30-6616-4d69-8355-44557e20c398}</Project>
       <Name>Glass.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Otimizacao\Glass.Otimizacao\Glass.Otimizacao.csproj">
+      <Project>{876c89c4-d89e-4e70-ab98-52c008f0de85}</Project>
+      <Name>Glass.Otimizacao</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Rentabilidade\Glass.Rentabilidade\Glass.Rentabilidade.csproj">
       <Project>{049560e8-0306-483c-a782-8be14118a6ed}</Project>
