--- a/Negocios/Glass.Negocios.Componentes/Glass.Negocios.Componentes.csproj
+++ b/Negocios/Glass.Negocios.Componentes/Glass.Negocios.Componentes.csproj
@@ -294,6 +294,11 @@
     <Compile Include="Global\VeiculoFluxo.cs" />
     <Compile Include="Instalacao\InstalacaoFluxo.cs" />
     <Compile Include="ObtemDescritorEntidade.cs" />
+    <Compile Include="Otimizacao\EntradaEstoqueChapa.cs" />
+    <Compile Include="Otimizacao\EstoqueChapa.cs" />
+    <Compile Include="Otimizacao\Material.cs" />
+    <Compile Include="Otimizacao\OtimizacaoFluxo.cs" />
+    <Compile Include="Otimizacao\SessaoOtimizacao.cs" />
     <Compile Include="PCP\CalculadoraRentabilidadePedidoEspelho.cs" />
     <Compile Include="PCP\CapacidadeProducaoDiariaClassificacaoFluxo.cs" />
     <Compile Include="PCP\CavaleteFluxo.cs" />
@@ -337,6 +342,10 @@
     <ProjectReference Include="..\..\Global\UI\Web\Glass.Global.UI.Web.Process\Glass.Global.UI.Web.Process.csproj">
       <Project>{53E0EF88-B812-45FE-9F91-F4F7889BD6CB}</Project>
       <Name>Glass.Global.UI.Web.Process</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Otimizacao\Glass.Otimizacao\Glass.Otimizacao.csproj">
+      <Project>{876C89C4-D89E-4E70-AB98-52C008F0DE85}</Project>
+      <Name>Glass.Otimizacao</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Rentabilidade\Glass.Rentabilidade\Glass.Rentabilidade.csproj">
       <Project>{049560e8-0306-483c-a782-8be14118a6ed}</Project>
