#69253 - Ajustes para o aplicativo de calculo de projetos

--- a/Api/Glass.Api.Host/Mef.config
+++ b/Api/Glass.Api.Host/Mef.config
@@ -62,6 +62,55 @@
         <export contractType="Glass.Global.Negocios.IDeviceAppFluxo, Glass.Negocios" />
       </exports>
     </part>
+
+
+    <part type="Glass.Rentabilidade.Negocios.Componentes.RentabilidadeFluxo, Glass.Negocios.Componentes"  partCreationPolicy="Shared">
+      <importingConstructor useFirst="false" />
+      <exports>
+        <export contractName="" contractType="Glass.Rentabilidade.Negocios.IRentabilidadeFluxo, Glass.Negocios" member="" />
+        <export contractName="" contractType="Glass.Rentabilidade.IProvedorCalculadoraRentabilidade, Glass.Rentabilidade" member="" />
+        <export contractName="" contractType="Glass.Rentabilidade.IProvedorIndicadorFinanceiro, Glass.Rentabilidade" member="" />
+        <export contractName="" contractType="Glass.Rentabilidade.IProvedorDescritorRegistroRentabilidade, Glass.Rentabilidade" member="" />
+        <export contractName="" contractType="Glass.Rentabilidade.Negocios.Entidades.IProvedorExpressaoRentabilidade, Glass.Negocios.Entidades" />
+        <export contractName="" contractType="Glass.Rentabilidade.Negocios.Entidades.IProvedorConfigRegistroRentabilidade, Glass.Negocios.Entidades" />
+      </exports>
+    </part>
+
+    <part type="Glass.Pedido.Negocios.Componentes.CalculadoraRentabilidadePedido, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.Pedido)"
+                contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.Pedido, Glass.Data], Glass.Negocios" />
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.ProdutosPedido)"
+                contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.ProdutosPedido, Glass.Data], Glass.Negocios" />
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.AmbientePedido)"
+                contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.AmbientePedido, Glass.Data], Glass.Negocios" />
+        <export contractName="Glass.Data.ICalculadoraRentabilidade(Glass.Data.Model.Pedido)"
+                contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.Pedido, Glass.Data], Glass.Data" />
+        <export contractName="Glass.Data.ICalculadoraRentabilidade(Glass.Data.Model.ProdutosPedido)"
+                contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.ProdutosPedido, Glass.Data], Glass.Data" />
+        <export contractName="Glass.Data.ICalculadoraRentabilidade(Glass.Data.Model.AmbientePedido)"
+                contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.AmbientePedido, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
+
+    <part type="Glass.PCP.Negocios.Componentes.CalculadoraRentabilidadePedidoEspelho, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.PedidoEspelho)"
+                contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.PedidoEspelho, Glass.Data], Glass.Negocios" />
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.ProdutosPedidoEspelho)"
+                contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.ProdutosPedidoEspelho, Glass.Data], Glass.Negocios" />
+        <export contractName="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade(Glass.Data.Model.AmbientePedidoEspelho)"
+                contractType="Glass.Rentabilidade.Negocios.IProvedorItemRentabilidade`1[Glass.Data.Model.AmbientePedidoEspelho, Glass.Data], Glass.Negocios" />
+        <export contractName="Glass.Data.ICalculadoraRentabilidade(Glass.Data.Model.PedidoEspelho)"
+                contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.PedidoEspelho, Glass.Data], Glass.Data" />
+        <export contractName="Glass.Data.ICalculadoraRentabilidade(Glass.Data.Model.ProdutosPedidoEspelho)"
+                contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.ProdutosPedidoEspelho, Glass.Data], Glass.Data" />
+        <export contractName="Glass.Data.ICalculadoraRentabilidade(Glass.Data.Model.AmbientePedidoESpelho)"
+                contractType="Glass.Data.ICalculadoraRentabilidade`1[Glass.Data.Model.AmbientePedidoEspelho, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
     
   </parts>
 </mef.configuration>
