--- a/Api/Glass.Api.Host/Glass.Api.Host.csproj
+++ b/Api/Glass.Api.Host/Glass.Api.Host.csproj
@@ -371,9 +371,12 @@
     <Content Include="packages.config" />
     <Content Include="Mef.config" />
     <Content Include="GDA.config" />
-    <Content Include="AppSettings.config" />
+    <Content Include="AppSettings.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\api.pubxml" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
+    <None Include="Properties\PublishProfiles\pub.pubxml" />
     <None Include="Properties\PublishProfiles\Publish.pubxml" />
     <None Include="Properties\PublishProfiles\PublishApi.pubxml" />
     <None Include="Web.Debug.config">
