#SemChamado - Alteração na forma como as imagens de projetos são enviadas para o aplicativo

--- a/Api/Glass.Api.Host/Glass.Api.Host.csproj
+++ b/Api/Glass.Api.Host/Glass.Api.Host.csproj
@@ -340,6 +340,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\IdentityConfig.cs" />
+    <Compile Include="App_Start\ImagesConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="App_Start\Bootstrapper.cs" />
