--- a/Glass.Data.Test/app.config
+++ b/Glass.Data.Test/app.config
@@ -32,7 +32,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.9.8.0" newVersion="6.9.8.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.9.11.0" newVersion="6.9.11.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Management" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -45,6 +45,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Configuration" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CalcEngine" publicKeyToken="338adf0247ea9d68" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.8.40.40" newVersion="1.8.40.40" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
