--- a/Otimizacao/UI/Web/Glass.Otimizacao.UI.Web.Process/app.config
+++ b/Otimizacao/UI/Web/Glass.Otimizacao.UI.Web.Process/app.config
@@ -50,6 +50,10 @@
         <assemblyIdentity name="System.Configuration" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CalcEngine" publicKeyToken="338adf0247ea9d68" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.8.40.40" newVersion="1.8.40.40" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
