--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -508,5 +508,32 @@
       </exports>
     </part>
     
+    <part type="Glass.Fiscal.Negocios.Componentes.LocalizadorNaturezaOperacao, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.ILocalizadorNaturezaOperacao, Glass.Negocios" />
+      </exports>
+    </part>
+    
+    <part type="Glass.Fiscal.Negocios.Componentes.ProvedorIcmsProdutoUf, Glass.Negocios.Componentes" partCreationPolicy="Shared">
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.Entidades.IProvedorIcmsProdutoUf, Glass.Negocios.Entidades" />
+      </exports>
+    </part>
+    
+    <part type="Glass.Fiscal.Negocios.Componentes.CalculadoraImposto, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.ICalculadoraImposto, Glass.Negocios" />
+      </exports>
+    </part>
+    
+    <part type="Glass.Pedido.Negocios.Componentes.CalculadoraImpostoPedido, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractName="Glass.Data.ICalculadoraImposto(Glass.Data.Model.Pedido)" 
+                contractType="Glass.Data.ICalculadoraImposto`1[Glass.Data.Model.Pedido, Glass.Data], Glass.Data" />
+      </exports>
+    </part>
+
   </parts>
 </mef.configuration>
