--- a/Negocios/Glass.Negocios.Entidades/Glass.Negocios.Entidades.csproj
+++ b/Negocios/Glass.Negocios.Entidades/Glass.Negocios.Entidades.csproj
@@ -108,6 +108,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fiscal\IProvedorIcmsProdutoUf.cs" />
     <Compile Include="Otimizacao\EstoqueChapaEntrada.cs" />
     <Compile Include="Estoque\ProdutoBaixaEstoquePesquisa.cs" />
     <Compile Include="Financeiro\ArquivoCartaoNaoIdentificado.cs" />
